# amazon-connect-pstn-transfer

./: .gitignore  README.md  VA_PSTN_Transfer.json  auth.go  auth_test.go  client.go  client_test.go  deploy.sh  go.mod  go.sum  handlers.go  handlers_test.go  httpclient.go  httpclient_test.go  logger.go  main.go  main_test.go  utils.go  utils_test.go
.github/workflows/: ci.yml  release.yml
cloudformation/: README.md  deploy-cloudformation.sh  parameters.json.example  template.yaml
events/: test.json  test_get_handoff_data.json  test_get_pstn_transfer_data.json
infra/cloudformation/: README.md  deploy-cloudformation.sh  parameters.json.example  template.yaml
lambdas/pstn-transfer-go/: README.md  auth.go  auth_test.go  client_test.go  handlers.go  handlers_test.go  httpclient.go  httpclient_test.go  logger.go  main.go  main_test.go  models.go  secretsmanager.go  secretsmanager_test.go  tools.go  utils.go  utils_test.go
lambdas/pstn-transfer-py/: README.md  package.sh  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
lambdas/pstn-transfer-py/src/: __init__.py  auth.py  client.py  handler.py  handlers.py  httpclient.py  logger.py  secretsmanager.py  types.py  utils.py  version.py
lambdas/pstn-transfer-py/tests/: __init__.py  conftest.py  test_auth.py  test_handler.py  test_handlers.py  test_httpclient.py  test_secretsmanager.py  test_utils.py
lambdas/pstn-transfer-ts/: .prettierignore  .prettierrc.json  README.md  eslint.config.mjs  jest.config.mjs  package-lock.json  package.json  tsconfig.json
scripts/: build-all.sh  build-go-lambda.sh  build-python-lambda.sh  build-typescript-lambda.sh  deploy.sh  format-all.sh  install-hooks.sh  lint-all.sh  pre-commit  test-all.sh
(+38 files in other folders)
